networkpolicy/networkpolicy__basic_kafka_setup__cert-manager__internet__any__egress__ports__80-443__nr62__lines16.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager--internet--any--egress--ports--80-443--nr62
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
